# SowSmith

./: .gitignore  README.md  pyproject.toml
Bang/: .gitignore  README.md  pyproject.toml  run_copper_001_tracker.ps1  tmp2.json
Bang/.purtera_artifacts/cache/: artifact_cache_0004afff5efd8612.json  artifact_cache_002a2ea9e6de1fbf.json  artifact_cache_002fe1f599dc3f2b.json  artifact_cache_00a59bd4f0d0da1d.json  artifact_cache_00a634c031d584e4.json  artifact_cache_00a8299307747cf7.json  artifact_cache_00e19945d4727a2b.json  artifact_cache_00fff584c132bd18.json  artifact_cache_01283d3696456b47.json  artifact_cache_013b3dbc0a295369.json  artifact_cache_01aa93ce6fa0558b.json  artifact_cache_020ee0a285ed88e0.json  artifact_cache_020f37370787655c.json  artifact_cache_021324f132ff0264.json  artifact_cache_0245dfc83d8563b4.json  artifact_cache_0259f51635615985.json  artifact_cache_025e152768f94bfb.json  artifact_cache_025e6b966c32d5cc.json  (+2127 more)
Bang/scripts/: compile_real_data_case.py  make_demo_fixtures.py
Bang/tests/: test_anchor_signatures.py  test_authority.py  test_compiler_e2e.py  test_evidence_coverage.py  test_graph_builder.py  test_packet_certificates.py  test_packetizer.py  test_parser_router.py  test_quote_parser.py  test_risk_scoring.py  test_roster_vendor_quantity_edges.py  test_xlsx_parser.py
Bang/tmp/: purtera_demo_output.json
parser-os/: README.md
parser-os/_handoff_COPPER_002_parser_gaps/: README_FOR_CODER.txt
parser-os/tests/: conftest.py  test_compile_manifest.py
src/sowsmith/: __init__.py  cli.py  render.py
tests/: test_render.py
(+86 files in other folders)
