[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sowsmith"
version = "0.1.0"
description = "Deterministic Statement of Work generator from OrbitBrief envelopes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Purtera-IT" },
]
keywords = ["sow", "statement-of-work", "purpulse", "orbitbrief", "managed-services"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sowsmith = "sowsmith.cli:main"

[project.urls]
Homepage = "https://github.com/Purtera-IT/SowSmith"
Repository = "https://github.com/Purtera-IT/SowSmith"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
